Update hero image in index.qmd and corresponding HTML file to replace toolbox graphic with R statistics logo for improved branding.

--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ Master R programming, statistical analysis, and reproducible research in one com
 ::::
 
 ::: hero-image
-<img src="img/toolbox2.png" alt="Data Science Toolkit" class="hero-img"/>
+<img src="img/rstats-logo.png" alt="Data Science Toolkit" class="hero-img"/>
 :::
 ::::::
 
